fixed vertical splitter to be always visible again

--- a/app/assets/stylesheets/trace_view/_right_menu.less
+++ b/app/assets/stylesheets/trace_view/_right_menu.less
@@ -29,6 +29,10 @@
   height: 20px !important;
 }
 
+.lm_splitter.lm_vertical {
+  padding-bottom: 2px;
+}
+
 .markdown-small {
   h1,
   h2,
